--- a/src/components/autocomplete/styles.css
+++ b/src/components/autocomplete/styles.css
@@ -52,3 +52,34 @@
     font-size: 12px;
     margin-top: 5px;
 }
+
+.custom-wrapper {
+    width: 100%;
+    height: 30px;
+    background-color: #ffffff;
+    padding: 2px;
+
+    color: #4f6f8f;
+    font-size: 15px;
+    border: 1px solid #4f6f8f;
+}
+
+.custom-suggestion-list {
+    position: absolute;
+    top: 40px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #4f6f8f;
+    font-size: 14px;
+    border: 1px solid #4f6f8f;
+    border-radius: 10px;
+    max-height: 200px;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.custom-suggestion-item {
+    padding: 5px;
+    cursor: pointer;
+    border: 1px solid #4f6f8f;
+}
